--- a/100.000 Personal Index.md
+++ b/100.000 Personal Index.md
@@ -2,6 +2,7 @@
 Title: Personal Index
 Author: カクドウ ~ Kakudou
 Tags: 
+Lang: EN
 
 Template: Index
 
@@ -17,6 +18,7 @@ let desiredTags = dv.current().DesiredTags
 let sourceFolder = dv.current().SourceFolder
 
 let allTags = dv.pages('"'+sourceFolder+'"')
+.filter(page => page.Lang == dv.current().Lang)
 .flatMap(page => page.file.tags)
 .filter(tag => tag != "#todo" && tag != "#definition")
 .groupBy(tag => tag)
@@ -33,6 +35,7 @@ if (desiredTags != null) {
 for (let tag of tags) {
 
   let pagesDefinition = dv.pages('#definition and '+tag.key)
+  .filter(page => page.Lang == dv.current().Lang)
 
   if (pagesDefinition.length > 0) {
     dv.el("center", "> [!EXAMPLE] "+tag.key+" ("+tag.rows.length+")")
@@ -52,6 +55,7 @@ for (let tag of tags) {
   }
 
   let pages = dv.pages(tag.key+' and "'+sourceFolder+'"')
+  .filter(page => page.Lang == dv.current().Lang)
   for (let page of pages) {
     dv.el("li", dv.fileLink(page.file.path, false,  page.Title))
   }
