:ambulance: fix index to exclude 000-meta

--- a/100.000.personal-index.md
+++ b/100.000.personal-index.md
@@ -7,7 +7,7 @@ Lang: EN
 Template: Index
 
 DesiredTags:
-SourceFolder: "/100-Personal"
+SourceFolder: "100-Personal"
 ---
 
 # Personal Index
@@ -17,7 +17,7 @@ SourceFolder: "/100-Personal"
 let desiredTags = dv.current().DesiredTags
 let sourceFolder = dv.current().SourceFolder
 
-let allTags = dv.pages('"'+sourceFolder+'"')
+let allTags = dv.pages('"'+sourceFolder+'" and !"000-Meta"')
 .filter(page => page.Lang == dv.current().Lang)
 .flatMap(page => page.file.tags)
 .filter(tag => tag != "#todo" && tag != "#definition")
@@ -54,7 +54,7 @@ for (let tag of tags) {
     dv.el("br")
   }
 
-  let pages = dv.pages(tag.key+' and "'+sourceFolder+'"')
+  let pages = dv.pages(tag.key+' and "'+sourceFolder+'" and !"000-Meta"')
   .filter(page => page.Lang == dv.current().Lang)
   for (let page of pages) {
     dv.el("li", dv.fileLink(page.file.path, false,  page.Title))
