:boom: rework all the para structure

--- a/300-Areas_of_Responsabilities/330-Hobby/332-Bug_Bounty/332.000.bug_bounty-index.md
+++ b/300-Areas_of_Responsabilities/330-Hobby/332-Bug_Bounty/332.000.bug_bounty-index.md
@@ -6,14 +6,11 @@ Lang: EN
 
 Template: Index
 
-Creation Date: 2023/01/16 21:59:44
-Modification Date: 2023/01/16 22:02:48
-
-DesiredTags:
-SourceFolder: "100-Personal/300-Resources/310-Bug_Bounty"
+DesiredTags: 
+SourceFolder: "332-Bug_Bounty"
 ---
 
-# Index
+# Bug Bounty Index
 
 ```dataviewjs
 
